<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/accountsFragment"
            android:icon="@android:drawable/arrow_down_float"
            android:title="@string/accounts" />

        <item
            android:id="@+id/second"
            android:icon="@android:drawable/arrow_down_float"
            android:title="Dollar" />

        <item
            android:id="@+id/third"
            android:icon="@android:drawable/arrow_down_float"
            android:title="Save" />

    </group>

</menu>